# Nazm

./: Cargo.toml  README.md  justfile  nazm.example.toml  rustfmt.toml
src/: lib.rs  main.rs
src/cli/: mod.rs
src/nazm/: mod.rs
src/registry/: always_show_scrollbars.rs  apps_color_mode.rs  mod.rs  notifications.rs  show_accent_color_on_start_and_taskbar.rs  system_color_mode.rs  taskbar_items_chat.rs  taskbar_items_task_view.rs  taskbar_items_widgets.rs  text_size.rs  transparency_effects.rs
